# SMGCC

./: .gitignore  BUGS.md  EXPL_STAGE.md  Makefile  PLAN.md  README.md  RULES.md  SMGCC.md  TASK.md  cc.py  colac.py  pyproject.toml  run.py
.github/workflows/: ci.yml
cola/: README.md  __init__.py  cobj.py  cobj_load.c  compiler.py  driver.py  opcodes.py  reader.py  vm.py
docs/: FUNCTION_SPEC.md
examples/: factorial.c
examples/cola/: counter.cola  factorial.cola  fib.cola  hello.cola
examples/test_programs/: test_all  test_all.c  test_while.c
grammars/: arith.peg  c.peg  cola.peg  meta.peg
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  .graphify_semantic_new.json  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: codellama.py  vault-bridge.sh
smgcc/: README.md  __init__.py  analyze.py  calc.py  cgen.py  cgrammar.py  driver.py  grammar.py  ir.py  peg.py  repl.py
smgcc_c/: peg.c  peg.h  test_peg.c
tests/: test_analyze.py  test_cc.py  test_cola.py  test_ir.py  test_smgcc.py  test_stage6.py
