[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smgcc"
version = "0.1.0"
description = "Self-hosting Minimalist C Compiler"
requires-python = ">=3.9"
license = "MIT"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
